# micro-services-example

./: .gitignore  docker-compose.yml
go-api/: Dockerfile  env.example  go.mod  go.sum  main.go
nginx/: default.conf
node-api/: Dockerfile  drizzle.config.ts  env.example  package-lock.json  package.json  tsconfig.json
node-api/drizzle/: 0000_lush_punisher.sql
node-api/drizzle/meta/: 0000_snapshot.json  _journal.json
node-api/src/: app.ts  index.ts  queue.ts
node-api/src/config/: index.ts
node-api/src/controller/: queue.controller.ts  user.controller.ts
node-api/src/db/: index.ts  migrate.ts  schema.ts
node-api/src/middleware/: validate-request.ts
node-api/src/routes/: index.ts
node-api/src/services/: rabbitMQ.ts
node-api/src/utils/: index.ts
python-api/: Dockerfile  api.py  main.py  pyproject.toml  requirements.txt
python-api/python_api/: main.py
python-api/python_api/db/: session.py
python-api/python_api/entities/: payment_entity.py
python-api/python_api/models/: payment.py
python-api/python_api/services/: rabbitmq.py
